--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@supabase/supabase-js": "^2.56.1",
     "@tanstack/react-query": "^5.83.0",
     "@vitejs/plugin-react": "^5.0.2",
+    "audit": "^0.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -54,6 +55,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
